Prevent footer jump on load
When the record button wasn't there, the footer wasn't tall enough.

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@
   --border-radius: 4px;
   --content-width: 800px;
   --header-min-height: 75px;
+  --footer-min-height: 115px;
 }
 
 html {
@@ -246,7 +247,7 @@ h1 i {
   position: fixed;
   bottom: 0;
   left: 0;
-  min-height: var(--header-min-height);
+  min-height: var(--footer-min-height);
   padding: 15px 10px;
   width: 100%;
   display: grid;
@@ -266,8 +267,8 @@ h1 i {
 .video-player-play-button {
   padding: 0;
   margin: 10px auto;
-  width: 50px;
-  height: 50px;
+  width: 65px;
+  height: 65px;
   background: rgba(0, 0, 0, 0.5);
   border: 4px solid currentColor;
   border-radius: 50%;
